<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_imge"
    tools:context=".MainActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:layout_margin="30dp"
        android:background="@drawable/login_imge"
        android:backgroundTint="#A9FFFFFF"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/loginText"
            android:orientation="vertical"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textColor="@color/green1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/login_person"
            android:drawablePadding="8dp"
            android:hint="@string/loginUsername"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_edittext"

            android:drawableStart="@drawable/login_lock"
            android:drawablePadding="8dp"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="260dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/login_forgot_password"
            android:text="@string/forgot_password_btn"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/green1"
            android:hint="@string/login_btn"
            android:text="@string/login_login_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="40dp" />


    </androidx.cardview.widget.CardView>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/loginSignupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/not_yet_register_text"
            android:textAlignment="center"
            android:textColor="@color/green2"
            android:textSize="14sp" />

    <TextView
        android:id="@+id/LoginSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/loginSignUpNow"
        android:padding="8dp"
        android:text="@string/signup_now_btn"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="14sp"
        android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/green2"
            android:gravity="center"
            android:hint="@string/login_Google"
            android:text="@string/google_btn"
            android:textColor="@color/white"
            android:textColorHighlight="#653F3F"
            app:cornerRadius="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="130dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/facebook_btn"
            app:cornerRadius="40dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/green2"/>
    </LinearLayout>



</LinearLayout>